<?xml version="1.0"?>
<package format="2">
  <name>convert_lidar_2_gps</name>
  <version>0.0.0</version>
  <description>

	chamo

  </description>
  <url></url>
  <author>bloeschm</author>
  <maintainer email="bloeschm@ethz.ch">bloeschm</maintainer>
  <license>BSD License</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>glog_catkin</depend>
  <depend>opencv3_catkin</depend>
  <depend>eigen_catkin</depend>
  <depend>read_write_data_lib</depend>
  <depend>visualization</depend>
  <depend>roscpp</depend>
</package>
