<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>create_desc_index</name>
  <version>0.0.0</version>
  <description>A plugin to show how to add new console plugins</description>
  <maintainer email="your-email@domain.tld">Maplab user</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>maplab_common</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>opencv3_catkin</depend>
  <depend>inverted_multi_index</depend>
  <depend>descriptor_projection</depend>
  <depend>read_write_data_lib</depend>
  <depend>orb_slam_lib</depend>
  <depend>visualization</depend>
  
</package>
