<?xml version="1.0"?>
<package format="2">
  <name>dso</name>
  <version>0.0.0</version>
  <description>

	chamo

  </description>
  <url></url>
  <author>bloeschm</author>
  <maintainer email="bloeschm@ethz.ch">bloeschm</maintainer>
  <license>BSD License</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>opencv3_catkin</depend>
  <depend>eigen_catkin</depend>
  <depend>suitesparse</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization</depend>
  <depend>read_write_data_lib</depend>
  <depend>cv_bridge</depend>
</package>
