<?xml version="1.0"?>
<package format="2">
  <name>pose_ekf</name>
  <version>0.0.0</version>
  <description>

    chamo

  </description>
  <url></url>
  <author>bloeschm</author>
  <maintainer email="bloeschm@ethz.ch">bloeschm</maintainer>
  <license>BSD License</license>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_filters</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>roslib</depend>
  <depend>visualization</depend>
  <depend>eigen_catkin</depend>
  <depend>gps_vis_odom</depend>
  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
</package>
